kadai2/parser.output
   0  $accept : %entry% $end

   1  toplevel : Expr SEMISEMI
   2           | LET ID EQ Expr SEMISEMI
   3           | LET REC ID EQ FUN ID RARROW Expr SEMISEMI

   4  Expr : IfExpr
   5       | LetExpr
   6       | LTExpr
   7       | LetRecExpr
   8       | FunExpr

   9  LetRecExpr : LET REC ID EQ FUN ID RARROW Expr IN Expr

  10  LetExpr : LET ID EQ Expr IN Expr

  11  LTExpr : PExpr LT PExpr
  12         | PExpr

  13  PExpr : PExpr PLUS MExpr
  14        | MExpr

  15  MExpr : MExpr MULT ANExpr
  16        | ANExpr

  17  ANExpr : ANExpr AND OExpr
  18         | OExpr

  19  OExpr : OExpr OR AppExpr
  20        | AppExpr

  21  AppExpr : AppExpr AExpr
  22          | AExpr

  23  AExpr : INTV
  24        | TRUE
  25        | FALSE
  26        | ID
  27        | LPAREN Expr RPAREN

  28  IfExpr : IF Expr THEN Expr ELSE Expr

  29  FunExpr : FUN ID RARROW Expr

  30  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (30)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 7
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	toplevel  goto 11
	Expr  goto 12
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	AExpr : LPAREN . Expr RPAREN  (27)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 25
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 4
	IfExpr : IF . Expr THEN Expr ELSE Expr  (28)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 26
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 5
	AExpr : TRUE .  (24)

	.  reduce 24


state 6
	AExpr : FALSE .  (25)

	.  reduce 25


state 7
	toplevel : LET . ID EQ Expr SEMISEMI  (2)
	toplevel : LET . REC ID EQ FUN ID RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET . REC ID EQ FUN ID RARROW Expr IN Expr  (9)
	LetExpr : LET . ID EQ Expr IN Expr  (10)

	REC  shift 27
	ID  shift 28
	.  error


state 8
	FunExpr : FUN . ID RARROW Expr  (29)

	ID  shift 29
	.  error


state 9
	AExpr : INTV .  (23)

	.  reduce 23


state 10
	AExpr : ID .  (26)

	.  reduce 26


state 11
	%entry% : '\001' toplevel .  (30)

	.  reduce 30


state 12
	toplevel : Expr . SEMISEMI  (1)

	SEMISEMI  shift 30
	.  error


state 13
	Expr : IfExpr .  (4)

	.  reduce 4


state 14
	Expr : LetExpr .  (5)

	.  reduce 5


state 15
	Expr : LTExpr .  (6)

	.  reduce 6


state 16
	Expr : LetRecExpr .  (7)

	.  reduce 7


state 17
	Expr : FunExpr .  (8)

	.  reduce 8


state 18
	LTExpr : PExpr . LT PExpr  (11)
	LTExpr : PExpr .  (12)
	PExpr : PExpr . PLUS MExpr  (13)

	PLUS  shift 31
	LT  shift 32
	RPAREN  reduce 12
	SEMISEMI  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	IN  reduce 12


state 19
	PExpr : MExpr .  (14)
	MExpr : MExpr . MULT ANExpr  (15)

	MULT  shift 33
	RPAREN  reduce 14
	SEMISEMI  reduce 14
	PLUS  reduce 14
	LT  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	IN  reduce 14


state 20
	MExpr : ANExpr .  (16)
	ANExpr : ANExpr . AND OExpr  (17)

	AND  shift 34
	RPAREN  reduce 16
	SEMISEMI  reduce 16
	PLUS  reduce 16
	MULT  reduce 16
	LT  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	IN  reduce 16


state 21
	ANExpr : OExpr .  (18)
	OExpr : OExpr . OR AppExpr  (19)

	OR  shift 35
	RPAREN  reduce 18
	SEMISEMI  reduce 18
	PLUS  reduce 18
	MULT  reduce 18
	LT  reduce 18
	AND  reduce 18
	THEN  reduce 18
	ELSE  reduce 18
	IN  reduce 18


state 22
	OExpr : AppExpr .  (20)
	AppExpr : AppExpr . AExpr  (21)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	RPAREN  reduce 20
	SEMISEMI  reduce 20
	PLUS  reduce 20
	MULT  reduce 20
	LT  reduce 20
	AND  reduce 20
	OR  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	IN  reduce 20

	AExpr  goto 36


state 23
	AppExpr : AExpr .  (22)

	.  reduce 22


state 24
	LetRecExpr : LET . REC ID EQ FUN ID RARROW Expr IN Expr  (9)
	LetExpr : LET . ID EQ Expr IN Expr  (10)

	REC  shift 37
	ID  shift 38
	.  error


state 25
	AExpr : LPAREN Expr . RPAREN  (27)

	RPAREN  shift 39
	.  error


state 26
	IfExpr : IF Expr . THEN Expr ELSE Expr  (28)

	THEN  shift 40
	.  error


state 27
	toplevel : LET REC . ID EQ FUN ID RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET REC . ID EQ FUN ID RARROW Expr IN Expr  (9)

	ID  shift 41
	.  error


state 28
	toplevel : LET ID . EQ Expr SEMISEMI  (2)
	LetExpr : LET ID . EQ Expr IN Expr  (10)

	EQ  shift 42
	.  error


state 29
	FunExpr : FUN ID . RARROW Expr  (29)

	RARROW  shift 43
	.  error


state 30
	toplevel : Expr SEMISEMI .  (1)

	.  reduce 1


state 31
	PExpr : PExpr PLUS . MExpr  (13)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	.  error

	MExpr  goto 44
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 32
	LTExpr : PExpr LT . PExpr  (11)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	.  error

	PExpr  goto 45
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 33
	MExpr : MExpr MULT . ANExpr  (15)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	.  error

	ANExpr  goto 46
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 34
	ANExpr : ANExpr AND . OExpr  (17)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	.  error

	OExpr  goto 47
	AppExpr  goto 22
	AExpr  goto 23


state 35
	OExpr : OExpr OR . AppExpr  (19)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	.  error

	AppExpr  goto 48
	AExpr  goto 23


state 36
	AppExpr : AppExpr AExpr .  (21)

	.  reduce 21


state 37
	LetRecExpr : LET REC . ID EQ FUN ID RARROW Expr IN Expr  (9)

	ID  shift 49
	.  error


state 38
	LetExpr : LET ID . EQ Expr IN Expr  (10)

	EQ  shift 50
	.  error


state 39
	AExpr : LPAREN Expr RPAREN .  (27)

	.  reduce 27


state 40
	IfExpr : IF Expr THEN . Expr ELSE Expr  (28)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 51
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 41
	toplevel : LET REC ID . EQ FUN ID RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET REC ID . EQ FUN ID RARROW Expr IN Expr  (9)

	EQ  shift 52
	.  error


state 42
	toplevel : LET ID EQ . Expr SEMISEMI  (2)
	LetExpr : LET ID EQ . Expr IN Expr  (10)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 53
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 43
	FunExpr : FUN ID RARROW . Expr  (29)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 54
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 44
	PExpr : PExpr PLUS MExpr .  (13)
	MExpr : MExpr . MULT ANExpr  (15)

	MULT  shift 33
	RPAREN  reduce 13
	SEMISEMI  reduce 13
	PLUS  reduce 13
	LT  reduce 13
	THEN  reduce 13
	ELSE  reduce 13
	IN  reduce 13


state 45
	LTExpr : PExpr LT PExpr .  (11)
	PExpr : PExpr . PLUS MExpr  (13)

	PLUS  shift 31
	RPAREN  reduce 11
	SEMISEMI  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	IN  reduce 11


state 46
	MExpr : MExpr MULT ANExpr .  (15)
	ANExpr : ANExpr . AND OExpr  (17)

	AND  shift 34
	RPAREN  reduce 15
	SEMISEMI  reduce 15
	PLUS  reduce 15
	MULT  reduce 15
	LT  reduce 15
	THEN  reduce 15
	ELSE  reduce 15
	IN  reduce 15


state 47
	ANExpr : ANExpr AND OExpr .  (17)
	OExpr : OExpr . OR AppExpr  (19)

	OR  shift 35
	RPAREN  reduce 17
	SEMISEMI  reduce 17
	PLUS  reduce 17
	MULT  reduce 17
	LT  reduce 17
	AND  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	IN  reduce 17


state 48
	OExpr : OExpr OR AppExpr .  (19)
	AppExpr : AppExpr . AExpr  (21)

	LPAREN  shift 3
	TRUE  shift 5
	FALSE  shift 6
	INTV  shift 9
	ID  shift 10
	RPAREN  reduce 19
	SEMISEMI  reduce 19
	PLUS  reduce 19
	MULT  reduce 19
	LT  reduce 19
	AND  reduce 19
	OR  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	IN  reduce 19

	AExpr  goto 36


state 49
	LetRecExpr : LET REC ID . EQ FUN ID RARROW Expr IN Expr  (9)

	EQ  shift 55
	.  error


state 50
	LetExpr : LET ID EQ . Expr IN Expr  (10)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 56
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 51
	IfExpr : IF Expr THEN Expr . ELSE Expr  (28)

	ELSE  shift 57
	.  error


state 52
	toplevel : LET REC ID EQ . FUN ID RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET REC ID EQ . FUN ID RARROW Expr IN Expr  (9)

	FUN  shift 58
	.  error


state 53
	toplevel : LET ID EQ Expr . SEMISEMI  (2)
	LetExpr : LET ID EQ Expr . IN Expr  (10)

	SEMISEMI  shift 59
	IN  shift 60
	.  error


state 54
	FunExpr : FUN ID RARROW Expr .  (29)

	.  reduce 29


state 55
	LetRecExpr : LET REC ID EQ . FUN ID RARROW Expr IN Expr  (9)

	FUN  shift 61
	.  error


state 56
	LetExpr : LET ID EQ Expr . IN Expr  (10)

	IN  shift 60
	.  error


state 57
	IfExpr : IF Expr THEN Expr ELSE . Expr  (28)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 62
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 58
	toplevel : LET REC ID EQ FUN . ID RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET REC ID EQ FUN . ID RARROW Expr IN Expr  (9)

	ID  shift 63
	.  error


state 59
	toplevel : LET ID EQ Expr SEMISEMI .  (2)

	.  reduce 2


state 60
	LetExpr : LET ID EQ Expr IN . Expr  (10)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 64
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 61
	LetRecExpr : LET REC ID EQ FUN . ID RARROW Expr IN Expr  (9)

	ID  shift 65
	.  error


state 62
	IfExpr : IF Expr THEN Expr ELSE Expr .  (28)

	.  reduce 28


state 63
	toplevel : LET REC ID EQ FUN ID . RARROW Expr SEMISEMI  (3)
	LetRecExpr : LET REC ID EQ FUN ID . RARROW Expr IN Expr  (9)

	RARROW  shift 66
	.  error


state 64
	LetExpr : LET ID EQ Expr IN Expr .  (10)

	.  reduce 10


state 65
	LetRecExpr : LET REC ID EQ FUN ID . RARROW Expr IN Expr  (9)

	RARROW  shift 67
	.  error


state 66
	toplevel : LET REC ID EQ FUN ID RARROW . Expr SEMISEMI  (3)
	LetRecExpr : LET REC ID EQ FUN ID RARROW . Expr IN Expr  (9)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 68
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 67
	LetRecExpr : LET REC ID EQ FUN ID RARROW . Expr IN Expr  (9)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 69
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 68
	toplevel : LET REC ID EQ FUN ID RARROW Expr . SEMISEMI  (3)
	LetRecExpr : LET REC ID EQ FUN ID RARROW Expr . IN Expr  (9)

	SEMISEMI  shift 70
	IN  shift 71
	.  error


state 69
	LetRecExpr : LET REC ID EQ FUN ID RARROW Expr . IN Expr  (9)

	IN  shift 71
	.  error


state 70
	toplevel : LET REC ID EQ FUN ID RARROW Expr SEMISEMI .  (3)

	.  reduce 3


state 71
	LetRecExpr : LET REC ID EQ FUN ID RARROW Expr IN . Expr  (9)

	LPAREN  shift 3
	IF  shift 4
	TRUE  shift 5
	FALSE  shift 6
	LET  shift 24
	FUN  shift 8
	INTV  shift 9
	ID  shift 10
	.  error

	Expr  goto 72
	IfExpr  goto 13
	LetExpr  goto 14
	LTExpr  goto 15
	LetRecExpr  goto 16
	FunExpr  goto 17
	PExpr  goto 18
	MExpr  goto 19
	ANExpr  goto 20
	OExpr  goto 21
	AppExpr  goto 22
	AExpr  goto 23


state 72
	LetRecExpr : LET REC ID EQ FUN ID RARROW Expr IN Expr .  (9)

	.  reduce 9


24 terminals, 15 nonterminals
31 grammar rules, 73 states
